--- a/deploymd/lab/dev37/k8s.ini
+++ b/deploymd/lab/dev37/k8s.ini
@@ -1,7 +1,7 @@
 #Configuration Begin
-K8S_PODNETWORKCIDR=10.136.0.0
-K8S_K8SCIDR=10.0.162.249
-K8S_CONTROLPLANEENDPOINTIP=10.0.162.249
-K8S_CONTROLPLANEENDPOINT=apiservervip
-K8S_KUBERNETESVERSION=v1.25.3
+podNetworkCidr=10.37.0.0
+k8sCidr=10.0.162.249
+controlPlaneEndpointIP=10.0.162.249
+controlPlaneEndpoint=apiservervip
+kubernetesVersion=v1.24.3
 #Configuration End
