--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         stage('Build') {
             steps {
                 // 执行构建步骤，这里只是一个示例
-                sh 'echo "Building..."'
+                sh 'cp -f deploy/ /deploy/‘
             }
         }
 
