update the python module path

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
         stage('Build') {
             steps {
                 // 执行构建步骤，这里只是一个示例
+                sh 'find . -type -f | xargs -I {} dos2unix {}'
                 sh ' rsync -av deploy/  /deploy'
             }
         }
