--- a/deploy/lab/lab/dev36/builddocker.ini
+++ b/deploy/lab/lab/dev36/builddocker.ini
@@ -1,3 +1,3 @@
 BUILD_DOCKER_BASE_IMAGE=centos:7.9.2009
-BUILDDOCKER_PROXY=192.168.0.34:3128
+BUILD_DOCKER_PROXY=192.168.0.34:3128
 ####################
