update the python module path

--- a/install/openapi/docker-compose.yml
+++ b/install/openapi/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - /deploy:/deploy
+      - /opt/workspace/autocloud/deploy:/deploy
       - /allinone:/allinone
     restart: always
     command: tail -f /dev/null
